test/corpus/statement/using_statement.txt
================================================================================
Using Statement
================================================================================

USING Package.Namespace.File.

--------------------------------------------------------------------------------

(source_file
  (using_statement
    (identifier)))

================================================================================
Using Statement Wildcard
================================================================================

USING Package.Namespace.*.

--------------------------------------------------------------------------------

(source_file
  (using_statement
    (identifier)))

================================================================================
Using Statement From Propath
================================================================================

USING Package.Namespace.File FROM PROPATH.

--------------------------------------------------------------------------------

(source_file
  (using_statement
    (identifier)))

================================================================================
Using Statement From Assembly
================================================================================

USING Package.Namespace.File FROM ASSEMBLY.

--------------------------------------------------------------------------------

(source_file
  (using_statement
	(identifier)))
