test/corpus/statements/create_statement.txt
================
create statement
================

CREATE ttTest NO-ERROR.

---

(program
  (statement
    (create_statement
	  (kwCREATE)
	  (identifier)
	  (kwNO_ERROR))))
	
========================
create statement with db
========================

CREATE database.table.

---

(program
  (statement
    (create_statement
	  (kwCREATE)
	  (scoped_identifier
	    (identifier)
	    (identifier)))))
