test/corpus/statements/do_statement
============
do statement
============

DO:
  a = b.
END.

---

(program
  (do_statement
	(kwDO)
	(code_block
	  (expression_statement
		(assignment_expression
		  (identifier)
		  (primary_expression
			(identifier))))
	(kwEND))))
