test/corpus/statements/empty_temp_table.txt
================
empty temp-table
================

EMPTY TEMP-TABLE ttTest NO-ERROR.

---

(program
  (empty_temp_table_statement
    (kwEMPTY)
    (kwTEMP_TABLE)
    (identifier)
    (kwNO_ERROR)))
