test/corpus/statements/error_directive_statement.txt
=====================
block level statement
=====================

BLOCK-LEVEL ON ERROR UNDO, THROW.

---

(program
  (statement
	  (block_level_statement
	    (kwBLOCK_LEVEL)
		(kwON)
		(kwERROR)
		(kwUNDO)
		(kwTHROW))))

=======================
routine level statement
=======================

ROUTINE-LEVEL ON ERROR UNDO, THROW.

---

(program
    (statement
	  (routine_level_statement
	    (kwROUTINE_LEVEL)
		(kwON)
		(kwERROR)
		(kwUNDO)
		(kwTHROW))))
