test/corpus/statements/if_then_else_statement.txt
==============================
if ... then ... else statement
==============================

IF 1 < 2
THEN
  cValue = "true":U.
ELSE
  cValue = "false":U.

---

(program
  (if_then_else_statement
    (kwIF)
    (binary_expression
      (decimal_integer_literal)
      (decimal_integer_literal))
    (kwTHEN)
    (expression_statement
      (assignment_expression
        (identifier)
        (character_literal
          (character_modifier))))
    (kwELSE)
    (expression_statement
      (assignment_expression
        (identifier)
        (character_literal
          (character_modifier))))))
