test/corpus/statements/message_statement.txt
=================
message statement
=================

MESSAGE "Test":U.

---

(program
  (message_statement
    (kwMESSAGE)
    (character_literal
      (string_modifier))))

======================
message statement skip
======================

MESSAGE "Test":U SKIP cTest.

---

(program
  (message_statement
    (kwMESSAGE)
      (character_literal
	(string_modifier))
      (kwSKIP)
      (identifier)))

=========================
message statement complex
=========================

MESSAGE cTest SKIP "oh dear":U VIEW-AS ALERT-BOX WARNING BUTTONS YES-NO-CANCEL TITLE "Message Title":U.

---

(program
  (message_statement
    (kwMESSAGE)
    (identifier)
    (kwSKIP)
    (character_literal
      (string_modifier))
    (kwVIEW_AS)
    (kwALERT_BOX)
    (kwWARNING)
    (kwBUTTONS)
    (kwYES_NO_CANCEL)
    (kwTITLE)
    (character_literal
      (string_modifier))))
