test/corpus/statements/return_statement.txt
================
return statement
================

RETURN.

---

(program
  (return_statement
    (kwRETURN)))

======================
return value statement
======================

RETURN cTest.

---

(program
  (return_statement
    (kwRETURN)
    (identifier)))

======================
return error statement
======================

RETURN ERROR.

---

(program
  (return_statement
    (kwRETURN)
    (kwERROR)))

============================
return error value statement
============================

RETURN ERROR "whoops":U.

---

(program
  (return_statement
    (kwRETURN)
    (kwERROR)
    (character_literal
      (string_modifier))))
