test/corpus/statements/using_statement.txt
===============
using statement
===============

USING za.co.mip.*.
USING test.
USING za.co.mip.* FROM PROPATH.
USING test        FROM ASSEMBLY.

---

(program
  (using_statement
    (kwUSING)
    (scoped_identifier
      (scoped_identifier
        (identifier)
        (identifier))
      (identifier)))
  (using_statement
    (kwUSING)
    (identifier))
  (using_statement
    (kwUSING)
    (scoped_identifier
      (scoped_identifier
        (identifier)
        (identifier))
      (identifier))
    (kwFROM)
    (kwPROPATH))
  (using_statement
    (kwUSING)
    (identifier)
    (kwFROM)
    (kwASSEMBLY)))
